# gl-mcp-python

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
src/gl_mcp/: __init__.py  config.py  main.py
src/gl_mcp/mcp/: __init__.py  server.py  transport.py
src/gl_mcp/providers/: __init__.py  base.py  jira.py
tests/: __init__.py  test_health.py
